refactored Expirable.caputure to return 3-variant value; added support of cps generators